syntax = "proto3";

package OfflinePush.Auth;

option go_package = ".;proto";

service Auth {
  rpc GetToken (GetTokenReq) returns (GetTokenResp) {}
  rpc DelToken (DelTokenReq) returns (DelTokenResp) {}
}

message GetTokenReq {
  string push_agent = 1;
  string bundle_id = 2;
}

message GetTokenResp {
  string token = 1;
  int64 expire_at = 2;     // unix_second
}

message DelTokenReq {
  string push_agent = 1;
  string bundle_id = 2;
  string token = 3;
}

message DelTokenResp {
  // nothing
}